# legend-pygeom-l1000

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/source/: cli_usage.md  conf.py  coordinate_systems.md  description.md  geom-dev.md  geometry_components.md  index.md  metadata.md  naming.md  runtime-cfg.md  visualization.md
misc/: config.json  dummy_metadata_generator.py
src/l1000geom/: PMT.py  __init__.py  calibration.py  cavern_and_labs.py  cli.py  core.py  cryo.py  dummy_metadata_generator.py  fibers.py  hpge_strings.py  profiles.py  watertank.py  watertank_instrumentation.py  wlsr.py
src/l1000geom/configs/: README.md  channelmap.json  config.json  special_metadata.yaml
src/l1000geom/materials/: __init__.py  surfaces.py
src/l1000geom/models/: BasePlate_large.stl  BasePlate_small.stl  TopPlate.stl  modpiece_0.stl  modpiece_1.stl  modpiece_10.stl  modpiece_11.stl  modpiece_12.stl  modpiece_13.stl  modpiece_14.stl  modpiece_15.stl  modpiece_16.stl  modpiece_17.stl  modpiece_18.stl  modpiece_19.stl  modpiece_2.stl  modpiece_20.stl  modpiece_21.stl  modpiece_22.stl  modpiece_23.stl  modpiece_24.stl  modpiece_25.stl  modpiece_26.stl  modpiece_27.stl  modpiece_28.stl  modpiece_29.stl  modpiece_3.stl  modpiece_30.stl  modpiece_31.stl  modpiece_32.stl  modpiece_33.stl  modpiece_34.stl  modpiece_35.stl  modpiece_36.stl  modpiece_37.stl  modpiece_38.stl  modpiece_39.stl  modpiece_4.stl  modpiece_40.stl  modpiece_41.stl  (+13 more)
src/legend_pygeom_l1000/: __init__.py
src/pygeoml1000/: cavern_and_labs.py  cli.py  config_compilation.py  core.py  cryo.py  dummy_metadata_generator.py  fibers.py  hpge_strings.py  watertank.py
src/pygeoml1000/configs/: array.yaml  config.json  crystal.yaml  detail.yaml  hpge.yaml  pmts.yaml  pmts_pos.yaml  sipm.yaml  string.yaml
src/pygeoml1000/materials/: __init__.py  surfaces.py
src/pygeoml1000/models/: BasePlate_medium.stl  BasePlate_medium_ortec.stl  BasePlate_xlarge.stl
tests/: test_calib.py  test_core.py  test_package.py
